[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.418
margin_top = -180.0
margin_right = -0.418121
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -57.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 36.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DaysCount" type="Label" parent="MarginContainer/CountdownContainer"]
margin_right = 21.0
margin_bottom = 22.0
text = "30"
align = 2
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
